Add trace file writer as submodule
Signed-off-by: ClemensLinnhoff <clemens.linnhoff@persival.de>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tools/openmcx"]
 	path = tools/openmcx
 	url = https://github.com/eclipse-openmcx/openmcx.git
+[submodule "tools/sl-5-6-osi-trace-file-writer"]
+	path = tools/sl-5-6-osi-trace-file-writer
+	url = https://github.com/openMSL/sl-5-6-osi-trace-file-writer.git
